Adds macOS e2e testing target

--- a/Tests/OnPasteboardChangeTests/testerino-crossplatform/testerino-crossplatform.xcodeproj/xcshareddata/xcschemes/testerino-crossplatform (iOS).xcscheme
+++ b/Tests/OnPasteboardChangeTests/testerino-crossplatform/testerino-crossplatform.xcodeproj/xcshareddata/xcschemes/testerino-crossplatform (iOS).xcscheme
@@ -52,6 +52,16 @@
                ReferencedContainer = "container:testerino-crossplatform.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "99CC129925682F6400E8BBDC"
+               BuildableName = "testerino-crossplatformMacOSUITests.xctest"
+               BlueprintName = "testerino-crossplatformMacOSUITests"
+               ReferencedContainer = "container:testerino-crossplatform.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
